# cli

./: .gitignore  LICENSE  README.md  pyproject.toml
jina_cli/: __init__.py  api.py  main.py  utils.py
tests/: test_cli.py  test_local.py
